# Principium-App

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml
actix-backend/: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod
actix-backend/.sqlx/: query-07f4ffa8adcdf03071cb08b98c75fcc233eb99c9aa1fcb4a76fad7c1e49dfb3c.json  query-1355431fc84d23b7e04495175a9292803830cf0b9d7c2c84a7b5f98b9ad5a4f5.json  query-4cd14ef0a86a8e666d0c7482f5b7448633610dc688c1f7d3ade9efb403201c41.json  query-5ac66f93b1fddc2159d2759fdcec9376462b2d8e857d4227607b9a97d9402e64.json  query-61da86b49349430d519dec3d63091b758855400407bd6629f1d3edf0a3290e86.json  query-6a4cf802cb64018808fbdd5688f518df1c9254ca4a1a2d917e0c4bae2b77b87d.json  query-72d7d51ae6853e17a003457568bcd2b5f0e319baf7538aa5422c552b9415861f.json  query-9274c6d916491d46f6e5d14dc87d04e929c96f567fc4d61518986e28cc832f4b.json  query-96b0a6480b991bf6c59f32c92c7de18e216f540d13abdd3e64e69fe12f8a3e3c.json  query-9a514a08b97d166e8f647c0b143d576f547eacf343622dc03848af1a6797dae0.json  query-c380958b2aa6360679798ff6e256df8fe9ca72ed90a41f8c7cf008cbd55a5d2d.json  query-c757269458a08e13168e3d0cd8a9d1ac3414c2dbec1ae50fd8a91f8e0e53cb5b.json  query-cc0fe72906d3a4b76f1d0d51fa3eafcb114935f2afb3ed4cc47075e3b0dc8c85.json  query-d183a2db64576dbb248eb51bfa8e692ebde2a0ad96829a995de6d5ccc501fd5d.json  query-d1ec3d2e8ce45e4000f1dffbb1c0b6f5a351fa32d98211bbb811d8c2acedccc7.json  query-f2e2c86c662fe01d3c287f59c94534312c07bc1d64ddcb8fb8155329cce1bcb5.json  query-fa4b13d0e4744d355c2dcff4bf945111b8f23f255399e823c86939662b32f7d8.json
actix-backend/src/: main.rs
(+17 files in other folders)
