[package]
name = "principium-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "principium-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
uuid = { version = "^1", features = ["serde", "v4"]}
serde = { version = "^1", features = ['derive']}
env_logger = "0.11.8"
log = "0.4"
sqlx = {version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"]}
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"]}
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
futures-util = "0.3"
